# exaide

./: README.md  cmp.py  gui.ui  pyproject.toml  test.txt
src/exaide/: __main__.py  _type.py  application.py  controller.py  menu.py  model.py  utilies.py  utilities.py  view.py  view_ctk.py
src/exaide/assets/: __init__.py
tests/: conftest.py  test_compare_widget.py  test_widget.py
tests/unit_test/: test_claim.py  test_description_model.py  test_model.py  test_search_model.py  test_text_compare_model.py
