[project]
name = "exaide"
version = "0.1.0"
description = "An aide for patent examination"
authors = [
    {name = "Chenyu Lue", email = "chenyulue@163.com"},
]
dependencies = [
    "ttkbootstrap>=1.10.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
