[project]
name = "exaide"
version = "0.1.0"
description = "An aide for patent examination"
authors = [
    {name = "Chenyu Lue", email = "chenyulue@163.com"},
]
dependencies = [
    "ttkbootstrap>=1.10.1",
    "chardet>=5.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
]
gui-design = [
    "pygubu-designer>=0.38",
]
